# fuse

./: .gitignore  README.md  biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.e2e.config.ts
.github/workflows/: ci.yml
docs/: architecture.md  bugs.md  regression-test.md  roadmap.md
docs/features/playback/: README.md
src/: App.tsx  index.css
src/components/ExportDialog/: index.tsx
src/components/MediaBin/: index.tsx
src/components/Preview/: index.tsx
src/components/TextOverlay/: index.tsx
src/components/Timeline/: index.tsx
src/hooks/: useVideoPlayer.ts
src/lib/: demuxer.ts  storage.ts  webcodecs.ts
src/lib/__tests__/: storage.test.ts  webcodecs.test.ts
src/store/: timeline.ts
src/store/__tests__/: timeline.test.ts
src/types/: mp4box.d.ts
src/wasm/audio-mixer/: fuse_audio_mixer.d.ts  fuse_audio_mixer.js  fuse_audio_mixer_bg.wasm  fuse_audio_mixer_bg.wasm.d.ts  package.json
src/wasm/muxer/: fuse_muxer.d.ts  fuse_muxer.js  fuse_muxer_bg.wasm  fuse_muxer_bg.wasm.d.ts  package.json
src/workers/: decode.worker.ts
tests/e2e/: demuxer.test.ts
tests/fixtures/: README.md  download.sh  index.ts
wasm/audio-mixer/: Cargo.toml
wasm/audio-mixer/src/: lib.rs
wasm/muxer/: Cargo.toml
wasm/muxer/src/: lib.rs
