[package]
name = "fuse-muxer"
version = "0.1.0"
edition = "2021"
authors = ["Fuse Team"]
description = "WebAssembly MP4 muxer for Fuse video editor"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
mp4 = "0.14"

[profile.release]
opt-level = "s"
lto = true

